@@ -11,13 +11,16 @@ my @req;
 sub schedule {
    my $reqcnt = scalar (keys %reqh);
    if ($reqcnt == 0 && !@req) {
-      print "no more jobs, finishing...\n";
+      warn "no more jobs, finishing...\n";
       $J->broadcast;
    }
-   while ($reqcnt < 20) {
+   while ($reqcnt < 200) {
       my $r = pop @req;
       return unless defined $r;
-      $r->[0]->(addreq ($r->[1]));
+      eval {
+         $r->[0]->(addreq ($r->[1]));
+      };
+      if ($@) { warn "EXCEPTION: $@\n" }
       $reqcnt = scalar (keys %reqh);
    }
 }
@@ -33,11 +36,12 @@ sub push_request {
 
 our $t;
 sub timer {
-   $t = AnyEvent->timer (after => 2, cb => sub {
+   $t = AnyEvent->timer (after => 1, cb => sub {
       schedule;
       my $reqcnt = scalar (keys %reqh);
       $reqcnt += @req;
-      print "$reqcnt outstanding requests\n";
+      my $rreqcnt = scalar (keys %reqh);
+      warn "$reqcnt outstanding requests [$rreqcnt in progress]\n";
       timer ();
    });
 }
