@@ -5,6 +5,13 @@ use Event;
 use AnyEvent;
 use Net::XMPP2::Client;
 
+sub append_outputfile {
+   open OUT, ">>disco_version.output"
+      or die "Couldn't open disco_version.output: $!\n";
+   print OUT $_[0];
+   close OUT;
+}
+
 sub version_req {
    my ($con, $dest) = @_;
 
@@ -16,12 +23,21 @@ sub version_req {
       sub {
          my ($node, $error) = @_;
          if ($error) {
-            warn "*** DISCO VERSION ERROR $dest: " . $error->string . "\n";
+            warn "$dest: DISCO VERSION ERROR $dest: " . $error->string . "\n";
          } else {
             my (@name) = $node->find_all ([qw/version query/], [qw/version name/]);
             my (@ver)  = $node->find_all ([qw/version query/], [qw/version version/]);
-            print "$dest: ".$node->attr ('from').": name: " . $name[0]->text . " version: " . $ver[0]->text . "\n" if @name and @ver;
-            print "$dest: no version\n" unless @name and @ver;
+            if (@name and @ver) {
+               my $from = $node->attr ('from');
+               my $name = $name[0]->text;
+               my $ver  =  $ver[0]->text;
+               $ver  =~ s/[\n\t]//g;
+               $name =~ s/[\n\t]//g;
+               print "$dest: $from: name: $name version: $ver\n";
+               append_outputfile ("$from\t$name\t$ver\n");
+            } else {
+               print "$dest: no version\n";
+            }
          }
       },
       to => $dest
@@ -30,11 +46,32 @@ sub version_req {
 
 my $j = AnyEvent->condvar;
 my $cl = Net::XMPP2::Client->new;
+my $t = undef;
+my @jids = map { chomp; $_ } <STDIN>;
+sub mkti {
+   my ($con) = @_;
+   $t = AnyEvent->timer (after => 1, cb => sub {
+      for (1..50) {
+         my $j = pop @jids;
+         if ($j) {
+            version_req ($con, $j);
+         } else {
+            print "no more jids to query...\n";
+            last;
+         }
+      }
+      mkti ($con);
+   });
+}
 $cl->add_account ('net_xmpp2@jabber.org', 'test');
 $cl->reg_cb (
    session_ready => sub {
       my ($cl, $acc) = @_;
-      version_req ($acc->connection, $ARGV[0]);
+      if (@ARGV) {
+         version_req ($acc->connection, $ARGV[0]);
+      } else {
+         mkti ($acc->connection);
+      }
       0
    },
    disconnect => sub {
