@@ -8,34 +8,22 @@ use Net::XMPP2 qw/xep-86/;
 use Net::XMPP2::Client;
 use Encode;
 
-sub dumpxml {
-   my $data = shift;
-   my $t = XML::Twig->new;
-   if ($t->safe_parse ("<deb>$data</deb>")) {
-      $t->set_pretty_print ('indented');
-      $t->print;
-      print "\n";
-   } else {
-      print "[$data]\n";
-   }
-}
-
 binmode STDOUT, ":utf8";
 
 my $j = AnyEvent->condvar;
-
-my $cl = Net::XMPP2::Client->new;
+my $cl = Net::XMPP2::Client->new (debug => 1);
+$cl->set_presence ('away', 'I\'m a bot now.', -1);
 $cl->add_account (@ARGV);
 $cl->reg_cb (
    connected => sub {
-      $cl->send_message ("Hello!" => 'elmex@jabbfer.org');
+      $cl->send_message ("Hello!" => 'elmex@jabber.org');
       0
    },
    roster_update => sub {
       my ($cl, $acc, $roster, $contacts) = @_;
       $roster->debug_dump;
-      $acc->connection ()->send_presence ('probe' => undef, to => 'elmex@jabfber.org');
-      print "OEOFWEFIEJWFEWO\n" if not $roster->is_retrieved;
+      #$acc->connection ()->send_presence ('probe' => undef, to => 'elmex@jabfber.org');
+      #print "OEOFWEFIEJWFEWO\n" if not $roster->is_retrieved;
       1
    },
    presence_update => sub {
@@ -43,29 +31,11 @@ $cl->reg_cb (
       $roster->debug_dump;
       1
    },
-   sasl_error => sub {
+   error => sub {
       my ($cl, $acc, $error) = @_;
-      print "SASL ERROR".$error->string."\n";
-   },
-   presence_error => sub {
-      my ($cl, $acc, $error) = @_;
-      print "PRESENCE ERROR: " .  $error->string . "\n";
-      1;
-   },
-   message_error => sub {
-      my ($cl, $acc, $error) = @_;
-      print "MESSAGE ERROR: " .  $error->string . "\n";
-      1;
+      print "ERROR: ".$error->string."\n";
    },
    disconnect => sub { warn "DISCON[@_]\n"; 1 },
-   debug_send => sub {
-      warn "send: @_\n";
-      1
-   },
-   debug_recv => sub {
-      warn "recv: @_\n";
-      1
-   },
 );
 
 $cl->reg_cb (contact_request_subscribe => sub {
@@ -83,14 +53,7 @@ $cl->reg_cb (contact_did_unsubscribe => sub {
 
 $cl->reg_cb (roster_update => sub {
    my ($cl, $acc, $roster, $contacts) = @_;
-
-  $roster->debug_dump;
-  # $roster->new_contact ('elmex@jabber.org', 'Der elmex', ['ABC', 'TEst'], sub {
-  #    $roster->get_contact ('elmex@jabber.org')->send_subscribe;
-  #    $roster->delete_contact ('elmex@jabber.org');
-  # });
-  #$cl->remove_accounts ("TEST");
-
+   $roster->debug_dump;
    0
 });
 
